--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <main>
     <figure>
       <img src="images/beets.jpg" alt="beets">
-      <figcaption">A bundle of organic beets from a local farm food co-op program.</figcaption>
+      <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
     <p class="germination">55 to 65 days are needed from germination to harvest of the rot.</p>
     <p> The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegeetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, Jim Halpert once said this about beets, <q>"Fact, bears eat beets. Bears, beets <em>Battlestar Galactica</em>"</q>.</p>
     <blockquote>
       <em><i>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
-      </i><p><cite><i>-Chris Pratt</i></cite><p></em>
+      </i></em><p><cite><i>-Chris Pratt</i></cite><p></em>
     </blockquote>
     <h2>Common varieties</h2>
     <ol style="list-style-type:lower-greek">
