Fix nutrition styling

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </figure>
     <p class="germination">55 to 65 days are needed from germination to harvest of the rot.</p>
     <p> The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegeetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
-    <p>In fact, Jim Halpert once said this about beets, <q>"Fact, bears eat beets. Bears, beets <em>Battlestar Galactica</em>"</q>.</p>
+    <p>In fact, <em>Jim Halpert</em> once said this about beets, <q>"Fact, bears eat beets. Bears, beets <em>Battlestar Galactica</em>"</q>.</p>
     <blockquote>
-      <em><i>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
-      </i></em><p><cite><i>-Chris Pratt</i></cite><p></em>
+      <i>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</i>
+      <cite><i>-Chris Pratt</i></cite>
     </blockquote>
     <h2>Common varieties</h2>
-    <ol style="list-style-type:lower-greek">
+    <ol>
       <li>Albino</li>
       <li>Bull's Blood</li>
       <li>Chioggia</li>
@@ -40,23 +40,27 @@
       <li>Early Wonder</li>
     </ol>
     <h2>Nutritional information</h2>
+    <div>
     <dl>
       <dt>
-        <i>Serving size: 100 g</i>
+        <dd>
+          <i>Serving size: 100</i>
+          <dd>
     </dl>
-    <ul style="list-style-type:none" class="nutrition">
+    </div>
+    <ul class="nutrition">
       <li>Energy:</li>
       <li><data value="180"> 180 kJ</data></li>
       <li>Carbohydrates:</li>
-      <li><data value="9.96">9.96 g</data></li>
+      <li><data value="9.96"> 9.96 g</data></li>
       <li>Fat:</li>
       <li><data value="0.18"> 0.18 g</data></li>
       <li>Protein:</li>
-      <li><data value="1.68"></data> 1.68 g</li>
+      <li><data value="1.68"> 1.68 g</data></li>
     </ul>
     <h2>Tags</h2>
     <aside>
-      <ul style="list-style-type:circle">
+      <ul class="tags">
         <li>Crimson</li>
         <li>Awesome</li>
         <li>Pickle-able</li>
