Fix footer size

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
     <p class="germination">55 to 65 days are needed from germination to harvest of the rot.</p>
-    <p> The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegeetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+    <p> The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegeetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <em>Jim Halpert</em> once said this about beets, <q>"Fact, bears eat beets. Bears, beets <em>Battlestar Galactica</em>"</q>.</p>
     <blockquote>
       <i>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</i>
@@ -40,14 +40,10 @@
       <li>Early Wonder</li>
     </ol>
     <h2>Nutritional information</h2>
-    <div>
     <dl>
-      <dt>
-        <dd>
-          <em>Serving size: 100</em>
-        </dd>
+      <dt><i>Serving size: 100 g</i>
+     </dt>
     </dl>
-    </div>
     <ul class="nutrition">
       <li>Energy:</li>
       <li><data value="180"> 180 kJ</data></li>
