Fix indent rror

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </dl>
     <ul class="nutrition">
       <li>Energy:</li>
-      <li><data value="180"> 180 kJ</data></li>
+      <li><data value="180" class="data"> 180 kJ</data></li>
       <li>Carbohydrates:</li>
       <li><data value="9.96"> 9.96 g</data></li>
       <li>Fat:</li>
