--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>In fact, <em>Jim Halpert</em> once said this about beets, <q>"Fact, bears eat beets. Bears, beets <em>Battlestar Galactica</em>"</q>.</p>
     <blockquote>
       <i>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</i>
-      <cite><br><em>-Chris Pratt</em></cite>
+      <cite class="pratt"><br><em>-Chris Pratt</em></cite>
     </blockquote>
     <h2>Common varieties</h2>
     <ol class="varieties">
